--- a/css/CboardsPage.css
+++ b/css/CboardsPage.css
@@ -5,7 +5,7 @@
 }
 .btncreatep{
     position: fixed;
-    top:510px;
+    top:460px;
     right: 65px;
     background:#e76c25;
     border-radius: 50%;
@@ -16,38 +16,44 @@
 }
 @media screen and (min-width:576px){
     .btncreatep{
-        top:510px;
+        top:460px;
         right: 100px;
     }
 }
 @media screen and (min-width:630px){
     .btncreatep{
-        top:510px;
+        top:460px;
         right: 150px;
     }
 }
 @media screen and (min-width:768px){
     .btncreatep{
-        top:510px;
+        top:460px;
         right: 210px;
     }
 }
 @media screen and (min-width:850px){
     .btncreatep{
-        top:510px;
+        top:460px;
         right: 260px;
     }
 }
 @media screen and (min-width:992px){
     .btncreatep{
-        top:510px;
+        top:460px;
         right: 300px;
     }
 }
 @media screen and (min-width:1200px){
     .btncreatep{
-        top:510px;
-        right: 350px;
+        top:460px;
+        right: 380px;
+    }
+}
+@media screen and (min-width:1400px){
+    .btncreatep{
+        top:460px;
+        right: 450px;
     }
 }
 .btncreatep:hover{
