--- a/css/CboardsPage.css
+++ b/css/CboardsPage.css
@@ -3,6 +3,10 @@
     src:url('Brush.woff') format("woff"),
         url('Brush.ttf') format("truetype");
 }
+img{
+    max-width: 100%;
+    max-height: 100%;
+}
 .btncreatep{
     position: fixed;
     top:460px;
