--- a/css/main.css
+++ b/css/main.css
@@ -3,19 +3,15 @@
     /* background-color: blue; */
 }
 
-div {
-     /* border: 1px solid rgb(255, 255, 255);  */
-}
-
 .container-all {
-    display: flex;
-    align-items: stretch;
+/*    display: flex;
+    align-items: stretch;*/
 }
 
 #sidebar {
     width: 250px;
     height: 100%;
-    background-color: rgb(77, 77, 77);
+    background-color: #ff6a00;
     color: white;
     transition: 1s;
 }
