修正剛剛的版本

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
-/** {
-    background-color: #181717;*/
-    /* background-color: blue; */
-/*}*/
+* {
+    background-color: #181717;
+/*     background-color: blue; */
+}
 
 /*.container-all {
     display: flex;
