--- a/css/EditPost.css
+++ b/css/EditPost.css
@@ -72,6 +72,8 @@ a:active {
             box-shadow: 2px 1px 4px #e76c25;
             border-radius:10px;
             cursor:pointer;
+            transition: 0.4s;
+
         }
         .zenbu .dougu{
             color: #fafafaea;
@@ -114,6 +116,7 @@ a:active {
     box-shadow: 2px 1px 4px #e76c25;text-align: center;
     border-radius:10px;
     cursor:pointer;
+    
 }
 .kobi img{
     width: 50%;
@@ -138,6 +141,7 @@ a:active {
     border-radius:10px;
     width: 20%;
     float: right;
+    transition: 0.4s;
 }
 .cbtn:hover{
     border: 1px double #cc2626;
