--- a/Main.Master
+++ b/Main.Master
@@ -5,7 +5,7 @@
 <html>
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title></title>
+    <title>MK Forun</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
     <link rel="stylesheet" href="css/bootstrap.css" />
@@ -114,9 +114,9 @@
                         <!-- 上區塊內的左上區塊(LOGO & 搜尋) -->
                         <!-- sm為4格，md為4格，lg為4格，置中-->
                         <div class="col-sm-4 col-md-4 col-lg-3">
-                            <div class="d-flex d-none d-sm-block searchArea float col-6">
+                            <div class="d-flex d-none d-sm-block searchArea">
                                 <asp:TextBox runat="server" ID="txtSearch" class="form-control" placeholder="搜尋"></asp:TextBox>
-                            <div class="float-left col-6">
+                            <div class="float-left">
                                 <asp:DropDownList ID="srchDrop" runat="server" class="form-select form-select-sm" aria-label=".form-select-sm example">
                                     <asp:ListItem Selected="True" Value="srchAll"> 全站搜尋 </asp:ListItem>
                                     <asp:ListItem Selected="false" Value="srchCurrent" disabled="disable"> 當前板塊搜尋 </asp:ListItem>
@@ -197,7 +197,7 @@
 
                             </div>
                         </div>
-                    </div>
+                        </div>
                     <!-- 下方 -->
                     <div class="container-fluid">
                         <div class="row">
@@ -326,12 +326,12 @@
         //通知
         function Notifytoggle() {
             var zindex = $('.Notifytext').css("z-index")
-            //alert(zindex);
+            alert(zindex);
             if (zindex < 0) {
-                $('.Notifytext').css("z-index", "999")
+                $('.Notifytext').css("z-index", "999");
             }
             else {
-                $('.Notifytext').css("z-index", "-999")
+                $('.Notifytext').css("z-index", "-999");
             }
         }
 
