--- a/Main.Master
+++ b/Main.Master
@@ -46,7 +46,7 @@
 <body>
     <form id="form1" runat="server">
 
-
+         <!--登入畫面-->
         <asp:PlaceHolder ID="plhLogin" runat="server" Visible="true">
 
             <asp:TextBox ID="txtAccount" runat="server"></asp:TextBox><br />
@@ -104,16 +104,15 @@
                         </nav>
                     </div>
                 </div>
-                <!-- 上區塊 -->
                 <div class="container-fluid bg-dark text-white">
+                    <!-- 上區塊 -->
                     <div class="row">
                         <!-- 上區塊內的左上區塊(LOGO & 搜尋) -->
                         <!-- sm為4格，md為4格，lg為4格，置中-->
                         <div class="col-sm-4 col-md-4 col-lg-3">
-                            <a href="HomePage.aspx" class="d-none d-sm-block">
-                                <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
-                            <div class="d-flex d-none d-sm-block">
+                            <div class="d-flex d-none d-sm-block searchArea float col-6">
                                 <asp:TextBox runat="server" ID="txtSearch" class="form-control" placeholder="搜尋"></asp:TextBox>
+                            <div class="float-left col-6">
                                 <asp:DropDownList ID="srchDrop" runat="server" class="form-select form-select-sm" aria-label=".form-select-sm example">
                                     <asp:ListItem Selected="True" Value="srchAll"> 全站搜尋 </asp:ListItem>
                                     <asp:ListItem Selected="false" Value="srchCurrent" disabled="disable"> 當前板塊搜尋 </asp:ListItem>
@@ -122,15 +121,19 @@
                                 </asp:DropDownList>
                                 <asp:Button runat="server" ID="btnSearh" class="btn btn-outline-success" type="submit" OnClick="btnSearh_Click" Text="Search"></asp:Button>
                             </div>
+                            </div>
                         </div>
 
                         <!-- 上區塊內的中間區塊(LOGO & 網站標題) -->
                         <!-- sm為4格，md為4格，lg為4格，置中-->
                         <div class="col-sm-4 col-md-4 col-lg-5 h3 text-center">
-                            <a href="/index.aspx" class="d-block d-sm-none">
-                                <img src="images/logo.png" width="30" height="30" class="d-inline-block align-top" alt=""></a>
+
+                            <a href="/index.aspx" class="d-block">
+                                <img src="images/logo.gif" width="40" height="40" class="d-inline-block align-top" alt=""></a>
                             MKForun
+
                         </div>
+
                         <!-- 上區塊內的右上區塊(使用者狀態區) -->
                         <!-- xs.sm時隱藏，sm以上顯示，sm為4格，md為4格，lg為4格，置中-->
                         <div class="d-none d-sm-block col-sm-4 col-md-4 col-lg-4  text-center ">
@@ -199,12 +202,13 @@
                             <!-- 固定母版塊 -->
                             <!-- xs.sm時隱藏，md以上顯示，md為2格 -->
                             <div class="d-none d-md-block col-md-2" id="PBArea">
-                                <a href="/HomePage.aspx">首頁Home <i class="fas fa-home"></i></a>
+                                <a href="/HomePage.aspx">首頁Home </a>
                                 <br>
                                 <%--使用API的母版塊，前台觀看--%>
                                 <asp:PlaceHolder ID="plhAPI2_normal" runat="server">
                                     <div id="PBDataList_normal2"></div>
                                 </asp:PlaceHolder>
+
                                 <%--使用API的母版塊，後台人員操作--%>
                                 <asp:PlaceHolder ID="plhAPI2_admin" runat="server" Visible="false">
                                     <div id="PBDataList_Admin2"></div>
@@ -236,7 +240,9 @@
                             <div class="d-none d-md-block col-md-2 ">
                                 <br />
                                 <div class="BLmember rounded border border-1 border-light overflow-auto">
+
                                     <asp:PlaceHolder ID="plhBlk" runat="server" Visible="false">
+
                                         <h3>黑名單</h3>
                                         <asp:TextBox ID="txtBlkAcc" CssClass="rounded-3 fs-5 text-white" runat="server" placeholder="(輸入禁言會員帳號)"></asp:TextBox>
                                         <asp:TextBox ID="txtBlkDate" CssClass="rounded-3 fs-5 text-white" runat="server" placeholder="(輸入禁言期限)"></asp:TextBox>
@@ -301,6 +307,7 @@
             </div>
         </asp:PlaceHolder>
     </form>
+
 
     <script>
         var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
