--- a/Main.Master
+++ b/Main.Master
@@ -46,7 +46,7 @@
 <body>
     <form id="form1" runat="server">
 
-
+         <!--登入畫面-->
         <asp:PlaceHolder ID="plhLogin" runat="server" Visible="true">
 
             <asp:TextBox ID="txtAccount" runat="server"></asp:TextBox><br />
@@ -105,7 +105,6 @@
                                     <asp:Button ID="btnPBSave1" runat="server" Text="結束編輯" OnClick="btnPBSave_Click" />
                                 </asp:PlaceHolder>
                             </div>
-                        </nav>
                     </div>
                 </div>
                 <!-- 上區塊 -->
