--- a/css/Display.css
+++ b/css/Display.css
@@ -39,6 +39,31 @@ a:active {
 div{
     /* border: 2px solid rgb(194, 194, 194); */
 }
+.modal{
+    font-family:'moubi';
+}
+.modal .modal-title{
+    font-size: 45px;
+}
+.modal .modal-body{
+    font-size: 30px;
+}
+.modal .btn{
+            color: antiquewhite; border:0;
+            background-color:#181717;
+            margin-right: -2px;
+            border: 1px none #e76c25;
+            box-shadow: 2px 2px 7px #e76c25;line-height: 25px;text-align: center;
+            border-radius:10px;
+            cursor:pointer;
+            float: right;
+            transition: 0.4s;
+}
+.modal .btn:hover{
+            color:#fff;
+            box-shadow: 2px 2px 7px #851a1a;
+            text-shadow: 2px 2px 5px #941a12;
+}
 .MainPost{
     padding: 10px;
     margin: 5px;
@@ -77,6 +102,10 @@ div{
         .MainPost .Postbtn{
             margin-left: 130px;
             margin-right: -10px;
+        }
+        .MainPost .Postbtn .btn{
+        color:#ffffff;
+
         }
         .MainPost .Postbtn div{
             color: antiquewhite; border:0;
