--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 * {
-    background-color: #181717;
+    /*background-color: #181717;*/
+    background-color: #070100;
     /*     background-color: blue; */
 }
 
