--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,23 @@
         padding-left: 20px;
     }
 
-        .hot-cboards .title img {
+        .hot-cboards .title .fire {
             float: left;
+            background: url(https://acegif.com/wp-content/gifs/fire-102.gif) no-repeat;
+            background-size: contain;
+            width: 100px;
+            height: 70px;
         }
+
+            .hot-cboards .title .fire h3 {
+                font-size: 26px;
+                text-decoration: none;
+                font-style: italic;
+                background-size: contain;
+
+                text-align: center;
+                position: relative;
+            }
 
         .hot-cboards .title h1 {
             line-height: 70px;
@@ -24,29 +38,38 @@
         display:flex;
     }
 
-        .hot-cboards .content .col {
-            background: red;
-            border-radius: 10px;
-            margin: 20px;
-            text-align: center;
-        }
 
         .hot-cboards .content a {
-            line-height: 80px;
-            font-size: 26px;
-            background: red;
-            color: rgba(248, 204, 145, 0.904);
-            width: 25%;
+            font-size: 20px;
             text-decoration: none;
             font-style: italic;
-        }
-        .hot-cboards .content .col img {
+            background: url("../images/asd.png") no-repeat;
+            background-size: contain;
+            width: 100%;
+            height: 160px;
+            text-align: center;
+            position: relative;
 
         }
+
+            .hot-cboards .content a:hover {
+                font-size: 20px;
+                text-decoration: none;
+                font-style: italic;
+                background: url("../images/asf.png") no-repeat;
+                background-size: contain;
+                width: 100%;
+                height: 160px;
+                text-align: center;
+                position: relative;
+            }
 
         .hot-cboards .content b {
-            background: red;
-            float: left;
+            background-color: transparent;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-60%, -80%);
         }
 /* ======================= */
 
@@ -67,9 +90,9 @@
     }
 
     .hot-posts .content {
+        background: url(https://acegif.com/wp-content/gifs/fire-15.gif) no-repeat;
         padding: 10px;
         margin: 20px;
-
     }
 
         .hot-posts .content .article {
