--- a/css/index.css
+++ b/css/index.css
@@ -11,20 +11,19 @@
 
         .hot-cboards .title .fire {
             float: left;
-            background: url(https://acegif.com/wp-content/gifs/fire-102.gif) no-repeat;
+            background: url(https://acegif.com/wp-content/gifs/fire-17.gif) no-repeat;
             background-size: contain;
             width: 100px;
+            position: relative;
             height: 70px;
         }
 
             .hot-cboards .title .fire h3 {
-                font-size: 26px;
-                text-decoration: none;
-                font-style: italic;
-                background-size: contain;
-
-                text-align: center;
-                position: relative;
+                background-color: transparent;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
             }
 
         .hot-cboards .title h1 {
@@ -90,12 +89,12 @@
     }
 
     .hot-posts .content {
-        background: url(https://acegif.com/wp-content/gifs/fire-15.gif) no-repeat;
         padding: 10px;
         margin: 20px;
     }
 
         .hot-posts .content .article {
+            background: url(https://acegif.com/wp-content/gifs/fire-15.gif) no-repeat;
             padding: 10px;
             margin: 0px 0px 20px auto;
             border: 1px double #e76c25;
@@ -107,7 +106,9 @@
             .hot-posts .content .article h1 {
                 font-size: 20px;
                 color: #0d6efd;
+                background-color: transparent;
             }
+
 
         .hot-posts .content h2 {
             margin-bottom: 0px;
@@ -144,6 +145,7 @@
             font-size: 20px;
             float: left;
             color: #0d6efd;
+            background-color: transparent;
         }
 
         .hot-posts .content .article h4 {
@@ -151,5 +153,9 @@
             float: right;
             margin-right: 30px;
             color: #0d6efd;
+            background-color: transparent;
+        }
+        .hot-posts .content .article h5 {
+            background-color: transparent;
         }
 
