--- a/css/index.css
+++ b/css/index.css
@@ -94,8 +94,16 @@
     }
 
         .hot-posts .content .article {
+
+            padding: 10px;
+            margin: 0px 0px 20px auto;
+            border: 1px double #e76c25;
+            box-shadow: 2px 2px 6px #e76c25;
+        }
+
+        .hot-posts .content .article:hover {
             background: url(https://acegif.com/wp-content/gifs/fire-15.gif) no-repeat;
-            background-size:100%;
+            background-size: 100%;
             padding: 10px;
             margin: 0px 0px 20px auto;
             border: 1px double #e76c25;
