--- a/css/index.css
+++ b/css/index.css
@@ -88,13 +88,16 @@
         margin-bottom: 30px;
     }
 
+        .hot-posts a {
+            text-decoration: none;
+        }
+
     .hot-posts .content {
         padding: 10px;
         margin: 20px;
     }
 
         .hot-posts .content .article {
-
             padding: 10px;
             margin: 0px 0px 20px auto;
             border: 1px double #e76c25;
@@ -114,13 +117,15 @@
 
             .hot-posts .content .article h1 {
                 font-size: 20px;
-                color: #0d6efd;
+                color: white;
                 background-color: transparent;
             }
 
 
         .hot-posts .content h2 {
             margin-bottom: 0px;
+            background: url(https://acegif.com/wp-content/gifs/fire-13.gif) no-repeat;
+            background-size: 100%;
             text-align: center;
             padding: 3px;
             background-color: red;
@@ -153,7 +158,7 @@
         .hot-posts .content .article h3 {
             font-size: 20px;
             float: left;
-            color: #0d6efd;
+            color: white;
             background-color: transparent;
         }
 
@@ -161,7 +166,7 @@
             font-size: 20px;
             float: right;
             margin-right: 30px;
-            color: #0d6efd;
+            color: white;
             background-color: transparent;
         }
         .hot-posts .content .article h5 {
