--- a/css/Display.css
+++ b/css/Display.css
@@ -71,9 +71,8 @@ div{
     font-family:'moubi';
     padding-left: 0px;
     text-shadow: 2px 2px 2px #270c0c;
-    border-bottom: 0.5px double #e76c25;
-    border-right: 0.5px solid #e76c25;
-    box-shadow: 2px 2px 7px #e76c25;text-align: left;
+    border-bottom: 0.5px double #b34d11;
+    box-shadow: 1px 1px 7px #e76c25;text-align: left;
 }
         .MainPost .mpostall{
             padding: 20px;
@@ -109,7 +108,6 @@ div{
         }
         .MainPost .Postbtn div{
             color: antiquewhite; border:0;
-            background-color:#181717;
             margin-right: -2px;
             border: 1px none #e76c25;
             box-shadow: 2px 2px 7px #e76c25;line-height: 25px;text-align: center;
